fixed spacing on front page of my experiment

--- a/src/templates/my-experiments-page/my_experiment/front-page/my_experiment_front_page.css
+++ b/src/templates/my-experiments-page/my_experiment/front-page/my_experiment_front_page.css
@@ -2,3 +2,16 @@
   padding-left: 20px;
   padding-right: 20px;
 }
+
+.my-experiment-front-page-wrapper .experiment-info-wrapper {
+  margin-right: 40px;
+}
+
+.my-experiment-front-page-wrapper > div {
+  display: inline-block;
+  vertical-align: top;
+}
+
+.my-experiment-front-page-wrapper > div > div {
+  margin-bottom: 40px;
+}
